--- a/datav/package.json
+++ b/datav/package.json
@@ -8,6 +8,7 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
     "echarts-liquidfill": "^2.0.6",
